--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.AddCityActivity"></activity>
         <activity
             android:name=".activities.CityManageActivity"
             android:label="@string/title_activity_city_manage"
