--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.AddCityActivity"></activity>
+        <activity
+            android:name=".activities.AddCityActivity"
+            android:label="@string/title_activity_add_city"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.Light"></activity>
         <activity
             android:name=".activities.CityManageActivity"
             android:label="@string/title_activity_city_manage"
