--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         vectorDrawables.useSupportLibrary = true
 
         buildConfigField "String", "$rootProject.ext.HeWeather.name", "\"$rootProject.ext.HeWeather.value\""
+        buildConfigField "String", "DataBaseName", "\"$rootProject.ext.DataBase.name\""
     }
     buildTypes {
         release {
@@ -50,4 +51,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
     implementation 'org.greenrobot:greendao:3.2.2'
+}
+
+greendao {
+    schemaVersion rootProject.ext.DataBase.version
 }
