--- a/config.gradle
+++ b/config.gradle
@@ -11,4 +11,9 @@ ext {
             name : "HeWeatherKey",
             value: "0adfab68ce9a4415821e74b18694dcb7"
     ]
+
+    DataBase = [
+            name : "weather-baby-db",
+            version : 1
+    ]
 }
