--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
     implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
 
 greendao {
