--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".services.AutoUpdateService"
+            android:enabled="true"
+            android:exported="true" />
+
         <activity
             android:name=".activities.AddCityActivity"
             android:label="@string/title_activity_add_city"
             android:launchMode="singleTop"
-            android:theme="@style/AppTheme.Light"></activity>
+            android:theme="@style/AppTheme.Light" />
         <activity
             android:name=".activities.CityManageActivity"
             android:label="@string/title_activity_city_manage"
