--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.amap.api:location:latest.integration'
 }
 
 greendao {
