--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <service
             android:name=".services.AutoUpdateService"
             android:enabled="true"
             android:exported="true" />
-
+        <service
+            android:name=".services.AutoLocationService"
+            android:enabled="true"
+            android:exported="true" />
         <service android:name="com.amap.api.location.APSService" />
 
         <meta-data
