--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <service
+            android:name=".services.UpdateWeatherAppWidgetService"
+            android:enabled="true"
+            android:exported="true"></service>
         <service
             android:name=".services.AutoUpdateService"
             android:enabled="true"
@@ -36,6 +39,16 @@
             android:enabled="true"
             android:exported="true" />
         <service android:name="com.amap.api.location.APSService" />
+
+        <receiver android:name=".widget.WeatherAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/weather_app_widget_info" />
+        </receiver>
 
         <meta-data
             android:name="com.amap.api.v2.apikey"
